// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute strcusx-exchange-rate should reject requests missing required bounds 1`] = `
{
  "error": {
    "message": "[Param: minRate] param is required but no value was provided",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute strcusx-exchange-rate should return junior success 1`] = `
{
  "data": {
    "boundsApplied": false,
    "computedResult": "1000000002222222222",
    "decimals": 18,
    "maxRate": "1050000000000000000",
    "minRate": "950000000000000000",
    "result": "1000000002222222222",
    "tranche": "junior",
  },
  "result": "1000000002222222222",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute strcusx-exchange-rate should return senior success 1`] = `
{
  "data": {
    "boundsApplied": false,
    "computedResult": "1000000000000000000",
    "decimals": 18,
    "maxRate": "1050000000000000000",
    "minRate": "950000000000000000",
    "result": "1000000000000000000",
    "tranche": "senior",
  },
  "result": "1000000000000000000",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
